force-app/main/default/objects/Case/fields/Account_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Usage_Type__c</fullName>
    <label>Account Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded Data Partner</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Adform Internal</fullName>
            </value>
            <value>
                <fullName>Audience Connector</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Other Data Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>