force-app/main/default/objects/Case/fields/Actual_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Actual_Behavior__c</fullName>
    <inlineHelpText>Tell us what actually happened.</inlineHelpText>
    <label>Actual Behavior</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>