force-app/main/default/objects/Case/fields/Ad_Ops_email__c.field-meta.xml
<CustomField>
    <fullName>Ad_Ops_email__c</fullName>
    <label>Ad Ops email</label>
    <length>118</length>
    <type>Text</type>
</CustomField>