force-app/main/default/objects/Case/fields/Additional_Platform_Accounts_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Platform_Accounts_2__c</fullName>
    <label>Additional Platform Accounts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>