force-app/main/default/objects/Case/fields/Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services__c</fullName>
    <inlineHelpText>Brand safety, contextual targeting, AG, Trading desk fee, etc</inlineHelpText>
    <label>Additional Services</label>
    <type>TextArea</type>
</CustomField>