force-app/main/default/objects/Case/fields/Additional_Services_DMP__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_DMP__c</fullName>
    <inlineHelpText>Any additional features required by the client and mentioned in the contract.</inlineHelpText>
    <label>Additional Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross-Device</fullName>
            </value>
            <value>
                <fullName>Look-A-Like</fullName>
            </value>
            <value>
                <fullName>Self-Service export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>