force-app/main/default/objects/Case/fields/Additional_Services_p__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_p__c</fullName>
    <inlineHelpText>PPAS, AG, S2S, Enable Native ads, Forecasting Enabled, Is For Testing Purposes, Is RFP Enabled</inlineHelpText>
    <label>Additional Services</label>
    <type>TextArea</type>
</CustomField>