force-app/main/default/objects/Case/fields/Adserving_Clicks_T_ADS_FEE_10__c.field-meta.xml
<CustomField>
    <fullName>Adserving_Clicks_T_ADS_FEE_10__c</fullName>
    <label>Adserving - Clicks &#39;T_ADS_FEE 10&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>