force-app/main/default/objects/Case/fields/Adserving_T_ADS_FEE_4__c.field-meta.xml
<CustomField>
    <fullName>Adserving_T_ADS_FEE_4__c</fullName>
    <label>Adserving &#39;T_ADS_FEE 4&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>