force-app/main/default/objects/Case/fields/Advanced_Traffic_TRF_ADV6__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Traffic_TRF_ADV6__c</fullName>
    <label>Advanced Traffic &#39;TRF_ADV6&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>