force-app/main/default/objects/Case/fields/Advertiser_Brand__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Brand__c</fullName>
    <formula>Contract__r.Advertiser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser / Brand</label>
    <type>Text</type>
</CustomField>