force-app/main/default/objects/Case/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <inlineHelpText>Agency ID was provided by client services together with Campaign ID and Client ID</inlineHelpText>
    <label>Agency ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>