force-app/main/default/objects/Case/fields/Agency_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sub_Code__c</fullName>
    <label>Agency Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>