force-app/main/default/objects/Case/fields/All_client_access2__c.field-meta.xml
<CustomField>
    <fullName>All_client_access2__c</fullName>
    <label>All client access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>