force-app/main/default/objects/Case/fields/API_Search_T_SRC_API_3__c.field-meta.xml
<CustomField>
    <fullName>API_Search_T_SRC_API_3__c</fullName>
    <label>API Search &#39;T_SRC_API 3&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>