force-app/main/default/objects/Case/fields/Available_in_Branded_Data_Market_Place__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Branded_Data_Market_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in only if the audience is &quot;Available in Branded Data Market Place&quot;.</description>
    <label>Available in Branded Data Market Place</label>
    <type>Checkbox</type>
</CustomField>