force-app/main/default/objects/Case/fields/Basic_Traffic_TRF_BSC6__c.field-meta.xml
<CustomField>
    <fullName>Basic_Traffic_TRF_BSC6__c</fullName>
    <label>Basic Traffic &#39;TRF_BSC6&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>