force-app/main/default/objects/Case/fields/Billing_title__c.field-meta.xml
<CustomField>
    <fullName>Billing_title__c</fullName>
    <label>Billing title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>