force-app/main/default/objects/Case/fields/Buying_Fee_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Buying_Fee_Configuration__c</fullName>
    <label>Buying Fee Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type_DMP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>