force-app/main/default/objects/Case/fields/Campaign_goal_KPI_s__c.field-meta.xml
<CustomField>
    <fullName>Campaign_goal_KPI_s__c</fullName>
    <label>Campaign goal/KPI&#39;s</label>
    <type>TextArea</type>
</CustomField>