force-app/main/default/objects/Case/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <type>TextArea</type>
</CustomField>