force-app/main/default/objects/Case/fields/Campaign_ID_numerical__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_numerical__c</fullName>
    <label>Campaign ID (numerical)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>