force-app/main/default/objects/Case/fields/Campaign_Site_Tracking_Data_Connection__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Site_Tracking_Data_Connection__c</fullName>
    <inlineHelpText>Which advertiser should be connected (Client Division ID, Agency name, Advertiser name).Only in Enterprise and Pay as You Go Contracts.</inlineHelpText>
    <label>Campaign &amp; Site-Tracking Data Connection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>