force-app/main/default/objects/Case/fields/Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Case_Approver__c</fullName>
    <label>Case Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fredrik Paul</fullName>
            </value>
            <value>
                <fullName>Greta Ghizzo</fullName>
            </value>
            <value>
                <fullName>Jack Salisbury</fullName>
            </value>
            <value>
                <fullName>Janine Bilz</fullName>
            </value>
            <value>
                <fullName>Jim Leseman</fullName>
            </value>
            <value>
                <fullName>Maritza Goya Torres</fullName>
            </value>
            <value>
                <fullName>Martin Talarek</fullName>
            </value>
            <value>
                <fullName>Oliver Schlüter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>