force-app/main/default/objects/Case/fields/Case_Currency__c.field-meta.xml
<CustomField>
    <fullName>Case_Currency__c</fullName>
    <label>Case Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>TRY</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>EEK</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>LBP</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>ISK</fullName>
            </value>
            <value>
                <fullName>PKR</fullName>
            </value>
            <value>
                <fullName>LKR</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AFN</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>RSD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>