force-app/main/default/objects/Case/fields/Case_Currency_p__c.field-meta.xml
<CustomField>
    <fullName>Case_Currency_p__c</fullName>
    <label>Case Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DKK</fullName>
                <default>true</default>
                <label>DKK</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>TRY</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>