force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <inlineHelpText>An internal Admin field used to categories Cases</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Tier 1: Additional Training</fullName>
            </value>
            <value>
                <fullName>Tier 2: Config Change</fullName>
            </value>
            <value>
                <fullName>Tier 3: Design Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>