force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPAS (direct)</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>Open RTB</fullName>
            </value>
            <value>
                <fullName>PMP deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>