force-app/main/default/objects/Case/fields/Clicks_T_ADS_FEE_3__c.field-meta.xml
<CustomField>
    <fullName>Clicks_T_ADS_FEE_3__c</fullName>
    <label>Clicks &#39;T_ADS_FEE 3&#39;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>