force-app/main/default/objects/Case/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <inlineHelpText>Client ID was provided by client services together with Campaign ID and Agency ID</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>