force-app/main/default/objects/Case/fields/Client_Internal_Order__c.field-meta.xml
<CustomField>
    <fullName>Client_Internal_Order__c</fullName>
    <label>Client Internal Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>