force-app/main/default/objects/Case/fields/Client_Internal_Order_Number_case__c.field-meta.xml
<CustomField>
    <fullName>Client_Internal_Order_Number_case__c</fullName>
    <formula>Contract__r.Client_Internal_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Internal Order Number</label>
    <type>Text</type>
</CustomField>