force-app/main/default/objects/Case/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Branded Data Partner</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Other Data Partner </fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>