force-app/main/default/objects/Case/fields/Client_with_MSA_PMSA__c.field-meta.xml
<CustomField>
    <fullName>Client_with_MSA_PMSA__c</fullName>
    <formula>Contract__r.Client_with_MSA_PMSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client with MSA/PMSA</label>
    <type>Checkbox</type>
</CustomField>