force-app/main/default/objects/Case/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Max Allowed Banner Weight, Set up Details &amp; etc.</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>