force-app/main/default/objects/Case/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Type of the agreement</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>