force-app/main/default/objects/Case/fields/Contract_Type_DMP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type_DMP__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Data Selling (Revenue Share)</fullName>
            </value>
            <value>
                <fullName>DSP Audience Connector</fullName>
            </value>
            <value>
                <fullName>Pay As You Go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>