force-app/main/default/objects/Case/fields/Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Formula__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>